--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "description": "",
   "devDependencies": {
     "sass": "^1.84.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-favicons-inject": "^2.2.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3"
-  }
+  },
+  "type": "module"
 }
